<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.github.jasperbigsum-commits</groupId>
        <artifactId>mybatis-like-sharephere-support</artifactId>
        <version>1.0.1-SNAPSHOT</version>
    </parent>

    <artifactId>mybatis-like-sharephere-support-common</artifactId>
    <name>mybatis-like-sharephere-support-common</name>
    <description>Core encryption metadata, SQL rewrite, and MyBatis interceptor support for mybatis-like-sharephere-support.</description>
    <url>https://github.com/jasperbigsum-commits/mybatis-like-sharephere-support</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>8</maven.compiler.release>
        <jsqlparser.version>4.9</jsqlparser.version>
        <bouncycastle.version>1.80</bouncycastle.version>
        <mybatis.version>3.5.19</mybatis.version>
        <lombok.version>1.18.44</lombok.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.mybatis</groupId>
            <artifactId>mybatis</artifactId>
        </dependency>
        <dependency>
            <groupId>com.github.jsqlparser</groupId>
            <artifactId>jsqlparser</artifactId>
            <version>${jsqlparser.version}</version>
        </dependency>
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcprov-jdk18on</artifactId>
            <version>${bouncycastle.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <!-- 兼容java8 要求 -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
            <optional>true</optional>
        </dependency>
    </dependencies>

</project>
